fixes cursor over invisible nav element

--- a/src/style/DashboardMain.scss
+++ b/src/style/DashboardMain.scss
@@ -259,7 +259,7 @@ aside li:hover a {
   color: transparent;
   background-color: transparent;
   border-color: transparent;
-  pointer: default;
+  cursor: default;
 }
 
 /* styles for tables displaying userinfo on settings page */
